rewyndah! made it work inside one passenger instance. monkey wha?

--- a/templates/config/cijoe_passenger.conf.tt
+++ b/templates/config/cijoe_passenger.conf.tt
@@ -1,12 +1,8 @@
 <VirtualHost *:80>
   ServerName <%= @cijoe_url %>
-  SetEnv PATH /usr/bin:/usr/local/bin
-  SetEnv RAILS_RELATIVE_URL_ROOT
-  DocumentRoot <%= @app_path %>
-
-  ErrorLog <%= @app_path %>/log/error_log
-  CustomLog <%= @app_path %>/log/access_log combined
-
-  PassengerMaxInstancesPerApp 1
-  PassengerMaxPoolSize 20
+  DocumentRoot <%= @app_path %>/public
+  <Directory "<%= @app_path %>/public">
+    Order allow,deny
+    Allow from all
+  </Directory>
 </VirtualHost>
